--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,30 +10,56 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.1.0"
-edition = "2021"
+edition      = "2021"
 rust-version = "1.85.0"
+version      = "0.1.0"
 
 [workspace.dependencies]
 # Web framework
-axum = "0.8.1"
-tower = "0.5.2"
+axum       = "0.8.1"
+tower      = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace", "cors"] }
 
 # Async runtime
 tokio = { version = "1.44.1", features = ["full"] }
 
 # Serialization
-serde = { version = "1.0", features = ["derive"] }
+serde      = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # Error handling
+anyhow    = "1.0"
 thiserror = "2.0"
-anyhow = "1.0"
 
 # Logging
-tracing = "0.1"
+tracing            = "0.1"
 tracing-subscriber = "0.3"
 
 # HTTP
 http = "1.1"
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
+
+[workspace.lints.clippy]
+all      = { level = "warn", priority = -1 }
+cargo    = { level = "warn", priority = -1 }
+nursery  = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+
+# Allow some pedantic lints
+cargo_common_metadata         = "allow"
+missing_docs_in_private_items = "allow"
+missing_errors_doc            = "allow"
+missing_panics_doc            = "allow"
+module_name_repetitions       = "allow"
+multiple_crate_versions       = "allow"
+must_use_candidate            = "allow"
+unused_async                  = "allow"
+
+# Enforce specific lints
+expect_used   = "warn"
+panic         = "warn"
+todo          = "warn"
+unimplemented = "warn"
+unwrap_used   = "warn"
