--- a/servers/enclave-server/Cargo.toml
+++ b/servers/enclave-server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "enclave-server"
-version.workspace = true
-edition.workspace = true
+edition = { workspace = true }
+name    = "enclave-server"
+version = { workspace = true }
 
 [[bin]]
 name = "enclave-server"
@@ -9,19 +9,22 @@ path = "src/main.rs"
 
 [dependencies]
 # Web framework
-axum.workspace = true
-tower.workspace = true
-tower-http.workspace = true
+axum       = { workspace = true }
+tower      = { workspace = true }
+tower-http = { workspace = true }
 
 # Async runtime
-tokio.workspace = true
+tokio = { workspace = true }
 
 # Services
 enclave-service = { path = "../../services/enclave-service" }
 
 # Logging
-tracing.workspace = true
-tracing-subscriber.workspace = true
+tracing            = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 # Error handling
-anyhow.workspace = true
+anyhow = { workspace = true }
+
+[lints]
+workspace = true
