--- a/shared/models/Cargo.toml
+++ b/shared/models/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "models"
-version.workspace = true
-edition.workspace = true
+edition = { workspace = true }
+name    = "models"
+version = { workspace = true }
 
 [dependencies]
-serde.workspace = true
-serde_json.workspace = true
-thiserror.workspace = true
+serde      = { workspace = true }
+serde_json = { workspace = true }
+thiserror  = { workspace = true }
+
+[lints]
+workspace = true
