Simplify linting, CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,8 @@ jobs:
         with:
           components: rustfmt
       
-      - name: Check Rust formatting
+      - name: Check formatting
         run: cargo fmt --all -- --check
-      
-      - name: Install taplo
-        run: cargo install taplo-cli
-      
-      - name: Check TOML formatting
-        run: taplo fmt --check
 
   lint:
     name: Lint
