--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ resolver = "2"
 edition      = "2021"
 rust-version = "1.85.0"
 version      = "0.1.0"
+license      = "MIT"
 
 [workspace.dependencies]
 # Web framework
