Commit cargo.lock and use license from workspace

--- a/servers/enclave-server/Cargo.toml
+++ b/servers/enclave-server/Cargo.toml
@@ -2,6 +2,7 @@
 edition = { workspace = true }
 name    = "enclave-server"
 version = { workspace = true }
+license = { workspace = true }
 
 [[bin]]
 name = "enclave-server"
