--- a/servers/backend-server/Cargo.toml
+++ b/servers/backend-server/Cargo.toml
@@ -2,6 +2,7 @@
 edition = { workspace = true }
 name    = "backend-server"
 version = { workspace = true }
+license = { workspace = true }
 
 [[bin]]
 name = "backend-server"
