--- a/services/enclave-service/Cargo.toml
+++ b/services/enclave-service/Cargo.toml
@@ -2,6 +2,7 @@
 edition = { workspace = true }
 name    = "enclave-service"
 version = { workspace = true }
+license = { workspace = true }
 
 [dependencies]
 axum       = { workspace = true }
