--- a/shared/models/Cargo.toml
+++ b/shared/models/Cargo.toml
@@ -2,6 +2,7 @@
 edition = { workspace = true }
 name    = "models"
 version = { workspace = true }
+license = { workspace = true }
 
 [dependencies]
 serde      = { workspace = true }
