--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,12 @@ axum       = "0.8.1"
 tower      = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace"] }
 
+# Validation
+validator = { version = "0.20.0", features = ["derive"] }
+axum-valid = "0.24.0"
+regex = "1.11.1"
+once_cell = "1.21.3"
+
 # Async runtime
 tokio = { version = "1.44.1", features = ["full"] }
 
