--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,6 +14,12 @@ axum = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
 
+# Validation
+validator = { workspace = true }
+axum-valid = { workspace = true }
+regex = { workspace = true }
+once_cell = { workspace = true }
+
 # Async runtime
 tokio = { workspace = true }
 
