--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,19 +58,30 @@ jobs:
         run: cargo build --release --verbose
 
   test:
-    name: Test
+    name: Tests
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Cache dependencies
-        uses: Swatinem/rust-cache@v2
+      - name: Start LocalStack
+        run: |
+          docker compose up -d
+          # Wait for services to be ready
+          sleep 5
+
+      - name: Health check LocalStack
+        run: curl -s http://localhost:4566/_localstack/health | jq -e '.services.s3 == "running"'
 
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test -- --nocapture
+
+      - name: Clean up
+        run: docker compose down
 
   deny:
     name: Cargo deny
