--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,3 +55,10 @@ aws-config = "1.5"
 aws-sdk-sqs = "1.64"
 aws-sdk-dynamodb = "1.82"
 aws-sdk-s3 = "1.82"
+
+# Test dependencies
+http-body-util = "0.1.3"
+tokio-test = "0.4.4"
+tempfile = "3.20.0"
+uuid = { version = "1.17.0", features = ["v4"] }
+dotenvy = "0.15.7"
