--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -41,3 +41,11 @@ aws-sdk-s3 = { workspace = true }
 
 # Time
 chrono = { workspace = true }
+
+[dev-dependencies]
+http-body-util = { workspace = true }
+tower = { workspace = true }
+tokio-test = { workspace = true }
+tempfile = { workspace = true }
+uuid = { workspace = true }
+dotenvy = { workspace = true }
