--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 # Web framework
+aide = { workspace = true }
 axum = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
@@ -41,6 +42,9 @@ aws-sdk-s3 = { workspace = true }
 
 # Time
 chrono = { workspace = true }
+
+# Schema generation for OpenAPI
+schemars = { workspace = true }
 
 [dev-dependencies]
 http-body-util = { workspace = true }
