--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -46,10 +46,12 @@ chrono = { workspace = true }
 # Schema generation for OpenAPI
 schemars = { workspace = true }
 
+# Environment loading
+dotenvy = { workspace = true }
+
 [dev-dependencies]
 http-body-util = { workspace = true }
 tower = { workspace = true }
 tokio-test = { workspace = true }
 tempfile = { workspace = true }
 uuid = { workspace = true }
-dotenvy = { workspace = true }
