--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,22 @@ license      = "MIT"
 
 [workspace.dependencies]
 # Web framework
-axum       = "0.8.1"
+aide = { version = "0.14.2", features = [
+    "redoc",
+    "swagger",
+    "scalar",
+    "axum-json",
+    "macros",
+] }
+axum       = "0.8.4"
 tower      = "0.5.2"
-tower-http = { version = "0.6.2", features = ["trace"] }
+tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
+
+# Validation
+validator = { version = "0.20.0", features = ["derive"] }
+axum-valid = "0.24.0"
+regex = "1.11.1"
+once_cell = "1.21.3"
 
 # Async runtime
 tokio = { version = "1.44.1", features = ["full"] }
@@ -35,6 +48,12 @@ thiserror = "2.0"
 tracing            = "0.1"
 tracing-subscriber = "0.3"
 
+# Time
+chrono = { version = "0.4", features = ["serde"] }
+
+# Rate limiting
+governor = "0.7"
+
 # HTTP
 http = "1.1"
 
@@ -42,3 +61,14 @@ http = "1.1"
 aws-config = "1.5"
 aws-sdk-sqs = "1.64"
 aws-sdk-dynamodb = "1.82"
+aws-sdk-s3 = "1.82"
+
+# Schema generation for OpenAPI
+schemars = { version = "0.8.21", features = ["derive"] }
+
+# Test dependencies
+http-body-util = "0.1.3"
+tokio-test = "0.4.4"
+tempfile = "3.20.0"
+uuid = { version = "1.17.0", features = ["v4"] }
+dotenvy = "0.15.7"
