--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,9 +10,16 @@ path = "src/main.rs"
 
 [dependencies]
 # Web framework
+aide = { workspace = true }
 axum = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
+
+# Validation
+validator = { workspace = true }
+axum-valid = { workspace = true }
+regex = { workspace = true }
+once_cell = { workspace = true }
 
 # Async runtime
 tokio = { workspace = true }
@@ -27,3 +34,24 @@ tracing-subscriber = { workspace = true }
 
 # Error handling
 anyhow = { workspace = true }
+thiserror = { workspace = true }
+
+# AWS SDK
+aws-config = { workspace = true }
+aws-sdk-s3 = { workspace = true }
+
+# Time
+chrono = { workspace = true }
+
+# Schema generation for OpenAPI
+schemars = { workspace = true }
+
+# Environment loading
+dotenvy = { workspace = true }
+
+[dev-dependencies]
+http-body-util = { workspace = true }
+tower = { workspace = true }
+tokio-test = { workspace = true }
+tempfile = { workspace = true }
+uuid = { workspace = true }
