--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,6 @@ axum       = "0.8.4"
 tower      = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
 
-# Validation
-validator = { version = "0.20.0", features = ["derive"] }
-axum-valid = "0.24.0"
-regex = "1.11.1"
-once_cell = "1.21.3"
-
 # Async runtime
 tokio = { version = "1.44.1", features = ["full"] }
 
@@ -43,6 +37,10 @@ serde_json = "1.0"
 # Error handling
 anyhow    = "1.0"
 thiserror = "2.0"
+
+# Encoding
+base64 = "0.22.1"
+hex = "0.4.3"
 
 # Logging
 tracing            = "0.1"
