--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,12 +15,6 @@ axum = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
 
-# Validation
-validator = { workspace = true }
-axum-valid = { workspace = true }
-regex = { workspace = true }
-once_cell = { workspace = true }
-
 # Async runtime
 tokio = { workspace = true }
 
@@ -48,6 +42,10 @@ schemars = { workspace = true }
 
 # Environment loading
 dotenvy = { workspace = true }
+
+# Encoding
+base64 = { workspace = true }
+hex = { workspace = true }
 
 [dev-dependencies]
 http-body-util = { workspace = true }
