--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 # Web framework
 aide = { workspace = true }
 axum = { workspace = true }
+axum-jsonschema = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
 
