--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -54,3 +54,4 @@ tower = { workspace = true }
 tokio-test = { workspace = true }
 tempfile = { workspace = true }
 uuid = { workspace = true }
+dotenvy = { workspace = true }
