--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,16 @@ license      = "MIT"
 
 [workspace.dependencies]
 # Web framework
-axum       = "0.8.1"
+aide = { version = "0.14.2", features = [
+    "redoc",
+    "swagger",
+    "scalar",
+    "axum-json",
+    "macros",
+] }
+axum       = "0.8.4"
 tower      = "0.5.2"
-tower-http = { version = "0.6.2", features = ["trace"] }
+tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
 
 # Async runtime
 tokio = { version = "1.44.1", features = ["full"] }
@@ -31,9 +38,16 @@ serde_json = "1.0"
 anyhow    = "1.0"
 thiserror = "2.0"
 
+# Encoding
+base64 = "0.22.1"
+hex = "0.4.3"
+
 # Logging
 tracing            = "0.1"
 tracing-subscriber = "0.3"
+
+# Time
+chrono = { version = "0.4", features = ["serde"] }
 
 # HTTP
 http = "1.1"
@@ -42,3 +56,14 @@ http = "1.1"
 aws-config = "1.5"
 aws-sdk-sqs = "1.64"
 aws-sdk-dynamodb = "1.82"
+aws-sdk-s3 = "1.82"
+
+# Schema generation for OpenAPI
+schemars = { version = "0.8.21", features = ["derive"] }
+
+# Test dependencies
+http-body-util = "0.1.3"
+tokio-test = "0.4.4"
+tempfile = "3.20.0"
+uuid = { version = "1.17.0", features = ["v4"] }
+dotenvy = "0.15.7"
