--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 # Web framework
+aide = { workspace = true }
 axum = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
@@ -27,3 +28,28 @@ tracing-subscriber = { workspace = true }
 
 # Error handling
 anyhow = { workspace = true }
+thiserror = { workspace = true }
+
+# AWS SDK
+aws-config = { workspace = true }
+aws-sdk-s3 = { workspace = true }
+
+# Time
+chrono = { workspace = true }
+
+# Schema generation for OpenAPI
+schemars = { workspace = true }
+
+# Environment loading
+dotenvy = { workspace = true }
+
+# Encoding
+base64 = { workspace = true }
+hex = { workspace = true }
+
+[dev-dependencies]
+http-body-util = { workspace = true }
+tower = { workspace = true }
+tokio-test = { workspace = true }
+tempfile = { workspace = true }
+uuid = { workspace = true }
