--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,8 +80,11 @@ jobs:
       - name: Health check LocalStack
         run: curl -s http://localhost:4566/_localstack/health | jq -e '.services.s3 == "running"'
 
-      - name: Run tests
-        run: cargo test -- --nocapture
+      - name: Run unit tests
+        run: cargo test --lib --bins -- --nocapture
+
+      - name: Run integration tests
+        run: cargo test --test integration -- --nocapture
 
       - name: Clean up
         run: docker compose down
