--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,4 +66,7 @@ tokio-test = "0.4.4"
 tempfile = "3.20.0"
 uuid = { version = "1.17.0", features = ["v4"] }
 dotenvy = "0.15.7"
+reqwest = { version = "0.11", features = ["json", "stream"] }
+sha2 = "0.10"
+url = "2.5"
 
