--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -54,3 +54,6 @@ tower = { workspace = true }
 tokio-test = { workspace = true }
 tempfile = { workspace = true }
 uuid = { workspace = true }
+reqwest = { workspace = true }
+sha2 = { workspace = true }
+url = { workspace = true }
