Serial env tests, Move dotenvy as a dev dep

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -41,9 +41,6 @@ chrono = { workspace = true }
 # Schema generation for OpenAPI
 schemars = { workspace = true }
 
-# Environment loading
-dotenvy = { workspace = true }
-
 # Encoding
 base64 = { workspace = true }
 hex = { workspace = true }
@@ -57,3 +54,5 @@ uuid = { workspace = true }
 reqwest = { workspace = true }
 sha2 = { workspace = true }
 url = { workspace = true }
+dotenvy = { workspace = true }
+serial_test = { workspace = true }
