--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,4 +69,5 @@ dotenvy = "0.15.7"
 reqwest = { version = "0.11", features = ["json", "stream"] }
 sha2 = "0.10"
 url = "2.5"
+serial_test = "3.2.0"
 
