--- a/deny.toml
+++ b/deny.toml
@@ -18,22 +18,21 @@ deny = [
     { name = "openssl", reason = "increases complexity for foreign binding compilation and bundle size" },
 ]
 
+# Allow multiple versions of these crates - they're commonly duplicated in the ecosystem
+multiple-versions = "allow"
+
 [licenses]
 version = 2
 confidence-threshold = 1.0
 
 # List of allowed licenses
 allow = [
-    "0BSD",
-    "Apache-2.0 WITH LLVM-exception",
     "Apache-2.0",
     "BSD-2-Clause",
     "BSD-3-Clause",
     "BSL-1.0",
-    "CC0-1.0",
     "ISC",
     "MIT",
-    "MPL-2.0",
     "Unicode-3.0",
     "Unlicense",
     "Zlib",
