--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,4 +70,5 @@ reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], defau
 sha2 = "0.10"
 url = "2.5"
 serial_test = "3.2.0"
+rand = "0.8"
 
