--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -56,3 +56,4 @@ sha2 = { workspace = true }
 url = { workspace = true }
 dotenvy = { workspace = true }
 serial_test = { workspace = true }
+rand = { workspace = true }
