--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - SERVICES=s3
       - DISABLE_EVENTS=1
+      - S3_SKIP_SIGNATURE_VALIDATION=0
     volumes:
       - /var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
