--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
-APP_ENV: development
+APP_ENV=development
 
-AWS_ACCESS_KEY_ID: test
-AWS_SECRET_ACCESS_KEY: test
-AWS_DEFAULT_REGION: us-east-1
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_DEFAULT_REGION=us-east-1
 
-S3_BUCKET_NAME: world-chat-media
+S3_BUCKET_NAME=world-chat-media
