--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,13 @@ aws-sdk-s3 = "1.82"
 # Schema generation for OpenAPI
 schemars = { version = "0.8.21", features = ["derive"] }
 
+# DynamoDB serialization
+serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
+
+# Strum
+strum = { version = "0.24.1", features = ["derive"] }
+
+
 # Test dependencies
 http-body-util = "0.1.3"
 tokio-test = "0.4.4"
