--- a/shared/push_notification_storage/Cargo.toml
+++ b/shared/push_notification_storage/Cargo.toml
@@ -30,3 +30,7 @@ tracing = { workspace = true }
 
 # Strum
 strum = { workspace = true }
+
+[dev-dependencies]
+tokio-test = { workspace = true }
+uuid = { workspace = true }
