Load env correctly in tests

--- a/shared/push_notification_storage/Cargo.toml
+++ b/shared/push_notification_storage/Cargo.toml
@@ -34,3 +34,4 @@ strum = { workspace = true }
 [dev-dependencies]
 tokio-test = { workspace = true }
 uuid = { workspace = true }
+dotenvy = { workspace = true }
