feat: Complete presigned url creation flow (#4)
* Add image storage

* Add types and update deps

* Setup tests in CI

* Import new mods

* Remove debug macros

* Remove governor dep

* Remove duplicate deny rule

* Rename to media storage, add presigned URLs

* Remove unused method

* Create upload endpoint

* Add validation with schemars

* Update request response types

* Add missing openapi extension

* Add docs to media responses

* Add tests

* Introduce versioning

* Restructure tests, add e2e test infra

* Serial env tests, Move dotenvy as a dev dep

* Romove dotenvy ref in main

* Fmt

* Fix audit

* Set correct default for dev

* Add e2e

* Add env vars for CI tests

* Switch to .env.example

* Add more e2e tests

* Mock expiration, add test case

* Cleanup tests

* Better separation in e2e tests

* Remove comments

* Fix lint warnings

* Remove todo comments

* Load env inside the test setup

* Test copying .env to root

* Enforce signature validation

* Fix env vars loading

* Reduce presign expiration to 3 minutes

* Remove unneeded clippy, and lower timeout

* Move tracing level to env

* Document skip validation param

* Rename to generate_test_encrypted_image

* Merge e2e and integration tests

* Remove max_image_size from env

* Use env filter

* S3 utils typo

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 # Web framework
 aide = { workspace = true }
 axum = { workspace = true }
+axum-jsonschema = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
 
@@ -40,9 +41,6 @@ chrono = { workspace = true }
 # Schema generation for OpenAPI
 schemars = { workspace = true }
 
-# Environment loading
-dotenvy = { workspace = true }
-
 # Encoding
 base64 = { workspace = true }
 hex = { workspace = true }
@@ -53,3 +51,10 @@ tower = { workspace = true }
 tokio-test = { workspace = true }
 tempfile = { workspace = true }
 uuid = { workspace = true }
+reqwest = { workspace = true }
+sha2 = { workspace = true }
+url = { workspace = true }
+dotenvy = { workspace = true }
+serial_test = { workspace = true }
+rand = { workspace = true }
+http = { workspace = true }
