--- a/shared/push_notification_storage/Cargo.toml
+++ b/shared/push_notification_storage/Cargo.toml
@@ -31,6 +31,10 @@ tracing = { workspace = true }
 # Strum
 strum = { workspace = true }
 
+# Random number generation
+rand = { workspace = true }
+
 [dev-dependencies]
 tokio-test = { workspace = true }
 uuid = { workspace = true }
+dotenvy = { workspace = true }
