Refactor shared backend storage crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,7 @@ members = [
     "backend",
     "enclave-worker",
     "secure-enclave",
-    "shared/queue",
-    "shared/push_notification_storage",
+    "shared/backend_storage",
 ]
 resolver = "2"
 
@@ -56,8 +55,6 @@ aws-config = "1.5"
 aws-sdk-sqs = "1.64"
 aws-sdk-dynamodb = "1.82"
 aws-sdk-s3 = "1.82"
-aws-credential-types = { version = "1.2.3" , features = ["hardcoded-credentials"]}
-
 
 # Schema generation for OpenAPI
 schemars = { version = "0.8.21", features = ["derive"] }
