--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,8 @@ AWS_SECRET_ACCESS_KEY=test
 AWS_DEFAULT_REGION=us-east-1
 
 S3_BUCKET_NAME=world-chat-media
+
+DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
+
+SUBSCRIPTION_QUEUE_URL=https://sqs.region.amazonaws.com/account/subscription-request-queue.fifo
+NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
