--- a/shared/backend_storage/Cargo.toml
+++ b/shared/backend_storage/Cargo.toml
@@ -40,3 +40,4 @@ rand = { workspace = true }
 tokio-test = { workspace = true }
 uuid = { workspace = true }
 aws-credential-types = { version = "1.2.3" , features = ["hardcoded-credentials"]}
+pretty_assertions = "1.4.1"
