--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,14 +74,19 @@ jobs:
       - name: Start LocalStack
         run: |
           docker compose up -d
-          # Wait for services to be ready
-          sleep 5
 
-      - name: Health check LocalStack
+      - name: Wait for LocalStack
         run: |
-          curl -s http://localhost:4566/_localstack/health | jq -e '.services.s3 == "running"'
-          curl -s http://localhost:4566/_localstack/health | jq -e '.services.dynamodb == "running"'
-          curl -s http://localhost:4566/_localstack/health | jq -e '.services.sqs == "running"'
+          for i in {1..10}; do
+            if curl -s http://localhost:4566/_localstack/health | jq -e '.services.s3 == "running"' && \
+               curl -s http://localhost:4566/_localstack/health | jq -e '.services.dynamodb == "running"' && \
+               curl -s http://localhost:4566/_localstack/health | jq -e '.services.sqs == "running"'; then
+              echo "LocalStack services are ready!"
+              break
+            fi
+            echo "Waiting for LocalStack... attempt $i/10"
+            sleep 1
+          done
 
       - name: Run tests
         run: cargo test -- --nocapture
