feat: Add shared queues (#7)
* Add shared queues

* Update readme, commends and dep

* Add tests

* Use message group id trait

* Have only one deny

* Configure test setup for queues properly

* Add dynamo health check

* See sqs queues

* Cleanup queue errors

* Remove duration type

* Add topic_members

* Improve localstack flakiness

* Move localstack healthcheck to docker compose

* Use a generic sqs queue

* Update seed script

* Revert localstack healthcheck change

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -35,6 +35,7 @@ thiserror = { workspace = true }
 aws-config = { workspace = true }
 aws-sdk-s3 = { workspace = true }
 aws-sdk-dynamodb = { workspace = true }
+aws-sdk-sqs = { workspace = true }
 
 # Time
 chrono = { workspace = true }
@@ -45,6 +46,9 @@ schemars = { workspace = true }
 # Encoding
 base64 = { workspace = true }
 hex = { workspace = true }
+
+# Backend Storage
+backend_storage = { workspace = true }
 
 [dev-dependencies]
 http-body-util = { workspace = true }
