--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
 
 # Async runtime
 tokio = { version = "1.44.1", features = ["full"] }
+futures = "0.3.31"
 
 # Serialization
 serde      = { version = "1.0", features = ["derive"] }
