--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -65,3 +65,4 @@ serial_test = { workspace = true }
 rand = { workspace = true }
 http = { workspace = true }
 aws-credential-types = { version = "1.2.3" , features = ["hardcoded-credentials"]}
+pretty_assertions = "1.4.1"
