Add CI check, update build script

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "enclave-worker",
     "secure-enclave",
     "shared/backend_storage",
+    "notification-worker",
 ]
 resolver = "2"
 
