--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,24 @@ jobs:
       - name: Clean up
         run: docker compose down
 
+  proto-check:
+    name: Proto Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install buf
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Lint protos
+        working-directory: ./notification-worker
+        run: buf lint
+
+      - name: Check breaking changes
+        working-directory: ./notification-worker
+        run: buf breaking --against buf.build/xmtp/proto:main
+
   deny:
     name: Cargo deny
     runs-on: ubuntu-latest
