Cleanup env and fix build issues

--- a/notification-worker/.env.example
+++ b/notification-worker/.env.example
@@ -1,38 +1,1 @@
-# Notification Worker Environment Variables
-
-# Environment: development, staging, or production
-ENVIRONMENT=development
-
-# AWS Configuration (for staging/production)
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your-access-key
-AWS_SECRET_ACCESS_KEY=your-secret-key
-
-# DynamoDB Configuration
-# Required for staging/production
-# DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
-# DYNAMODB_PUSH_GSI_NAME=topic-index
-
-# SQS Queue Configuration
-# Required for staging/production
-# NOTIFICATION_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/123456789/notification-queue.fifo
-
-# XMTP Network Configuration
-# Override default XMTP network address for the environment
-# XMTP_NETWORK_ADDRESS=grpc.dev.xmtp.network:5556
-
-# Worker Configuration
-# Number of concurrent workers (defaults: dev=10, staging=25, prod=50)
-# WORKER_COUNT=10
-
-# Cache Configuration
-# Interval in seconds to refresh topic cache from DynamoDB (default: 30)
-# CACHE_REFRESH_INTERVAL=30
-
-# Logging Configuration
-# Set log level: error, warn, info, debug, trace
-# RUST_LOG=notification_worker=info,aws_config=warn
-
-# Development Only
-# LocalStack endpoint (automatically set in development)
-# AWS_ENDPOINT_URL=http://localhost:4566
+APP_ENV=development
