--- a/notification-worker/Cargo.toml
+++ b/notification-worker/Cargo.toml
@@ -27,6 +27,7 @@ toml = "0.8"
 futures = "0.3"
 tokio-stream = "0.1"
 tokio-util = "0.7"
+flume = "0.11"
 
 # For future XMTP integration
 tonic = { version = "0.12", features = ["transport"] }
