--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,12 @@ jobs:
         with:
           components: clippy
 
+      - name: Install protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "25.x"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
 
@@ -47,6 +53,12 @@ jobs:
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Install protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "25.x"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
@@ -67,6 +79,12 @@ jobs:
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Install protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "25.x"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
@@ -95,6 +113,20 @@ jobs:
 
       - name: Clean up
         run: docker compose down
+
+  proto-check:
+    name: Proto Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install buf
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Check breaking changes
+        working-directory: ./notification-worker
+        run: buf breaking --against buf.build/xmtp/proto:main
 
   deny:
     name: Cargo deny
