--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-images:
-    runs-on: arc-4xlarge-amd64-runner
+    runs-on: arc-large-amd64-runner
     permissions:
       contents: read
       id-token: write
@@ -20,13 +20,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
-
-      - name: Setup Rust environment
-        uses: ./.github/actions/rust-setup
-        with:
-          cache-prefix: "build-images-${{ matrix.package }}"
-          gh-token: ${{ secrets.GIT_HUB_TOKEN }}
-          hugging_face_token: ${{ secrets.HUGGING_FACE_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435
