use ubuntu-latest image public repo

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-images:
-    runs-on: arc-large-amd64-runner
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       id-token: write
