--- a/deny.toml
+++ b/deny.toml
@@ -31,8 +31,10 @@ allow = [
     "BSD-2-Clause",
     "BSD-3-Clause",
     "BSL-1.0",
+    "CDLA-Permissive-2.0",
     "ISC",
     "MIT",
+    "OpenSSL",
     "Unicode-3.0",
     "Unlicense",
     "Zlib",
