--- a/notification-worker/.env.example
+++ b/notification-worker/.env.example
@@ -1,31 +1,9 @@
-# XMTP Notification Worker Configuration
 
-# Application environment (development, staging, production)
+RUST_LOG=info
 APP_ENV=development
 
-# XMTP gRPC endpoint override (optional)
-# If not set, uses default endpoints based on APP_ENV:
-# - development: http://localhost:25556
-# - staging: https://grpc.dev.xmtp.network:443
-# - production: https://grpc.production.xmtp.network:443
-# XMTP_GRPC_ADDRESS=https://grpc.dev.xmtp.network:443
-
-# TLS configuration override (optional)
-# If not set, uses default TLS settings based on APP_ENV
-# XMTP_USE_TLS=true
-
-# Timeout configurations (optional, values in milliseconds)
-# Initial reconnection delay
-# XMTP_RECONNECT_DELAY_MS=100
-
-# Maximum reconnection delay with exponential backoff
-# XMTP_MAX_RECONNECT_DELAY_MS=30000
-
-# gRPC connection timeout
-# XMTP_CONNECTION_TIMEOUT_MS=30000
-
-# gRPC connect timeout
-# XMTP_CONNECT_TIMEOUT_MS=5000
-
-# Logging configuration
-RUST_LOG=info
+# Timeout configurations (optional)
+XMTP_RECONNECT_DELAY_MS=100
+XMTP_MAX_RECONNECT_DELAY_MS=30000
+XMTP_CONNECTION_TIMEOUT_MS=30000
+XMTP_CONNECT_TIMEOUT_MS=5000
