--- a/notification-worker/.env.example
+++ b/notification-worker/.env.example
@@ -7,3 +7,6 @@ XMTP_RECONNECT_DELAY_MS=100
 XMTP_MAX_RECONNECT_DELAY_MS=30000
 XMTP_CONNECTION_TIMEOUT_MS=30000
 XMTP_CONNECT_TIMEOUT_MS=5000
+
+# XMTP Endpoint URL
+XMTP_ENDPOINT_URL=http://localhost:25556
