--- a/notification-worker/Cargo.toml
+++ b/notification-worker/Cargo.toml
@@ -26,11 +26,14 @@ toml = "0.8"
 # Async utilities
 futures = "0.3"
 tokio-stream = "0.1"
+tokio-util = "0.7"
+flume = "0.11"
 
 # For future XMTP integration
-tonic = { version = "0.12", features = ["transport", "tls-roots"] }
+tonic = { version = "0.12", features = ["transport", "tls", "tls-webpki-roots"] }
 prost = "0.13"
 prost-types = "0.13"
+rustls = { version = "0.23", features = ["ring"] }
 
 [dev-dependencies]
 serial_test = { workspace = true }
