--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,10 @@ AWS_DEFAULT_REGION=us-east-1
 S3_BUCKET_NAME=world-chat-media
 
 DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
+AUTH_PUSH_TABLE_NAME=world-chat-auth-proofs
 
 SUBSCRIPTION_QUEUE_URL=https://sqs.region.amazonaws.com/account/subscription-request-queue.fifo
 NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
+
+WORLD_ID_APP_ID=world-chat
+WORLD_ID_ACTION=verify
