--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,13 +69,19 @@ strum = { version = "0.24.1", features = ["derive"] }
 # Internal workspace dependencies
 backend_storage = { path = "shared/backend_storage" }
 
+# World ID 
+walletkit-core = { version = "0.1.3" }
+semaphore-rs = { version = "0.5" }
+
+# HTTP client
+reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
+
 # Test dependencies
 http-body-util = "0.1.3"
 tokio-test = "0.4.4"
 tempfile = "3.20.0"
 uuid = { version = "1.17.0", features = ["v4"] }
 dotenvy = "0.15.7"
-reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
 sha2 = "0.10"
 url = "2.5"
 serial_test = "3.2.0"
