--- a/deny.toml
+++ b/deny.toml
@@ -31,6 +31,7 @@ allow = [
     "BSD-2-Clause",
     "BSD-3-Clause",
     "BSL-1.0",
+    "CC0-1.0",
     "CDLA-Permissive-2.0",
     "ISC",
     "MIT",
@@ -38,9 +39,12 @@ allow = [
     "Unicode-3.0",
     "Unlicense",
     "Zlib",
+    "MPL-2.0", # Although this is copyleft, it is scoped to modifying the original files
 ]
 
+# Ignore unmaintained required crates warning
 [advisories]
-# Security advisories to check
-# The ignore list can be used to ignore specific advisories that don't affect your project
-ignore = []
+ignore = [
+    "RUSTSEC-2024-0388",  # Unmaintained `derivative` (2024-11-22)
+    "RUSTSEC-2024-0436", # Unmaintained `paste` (2025-04-04)
+]
